feat: redesign history layout, update contact image, fix translation key, and update governance descriptions

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,7 @@
         "subtitle": "Real Time • Market & Logistics",
         "live_data": "Live Data",
         "agricultural_commodities": "Agricultural Commodities",
+        "cbot_mar25": "CBOT • Mar/25",
         "soy": "SOYBEAN (CBOT)",
         "corn": "CORN (B3)",
         "ibovespa": "IBOVESPA (B3)",
