--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -23,6 +23,7 @@
         "subtitle": "Tiempo Real • Mercado y Logística",
         "live_data": "Datos en Vivo",
         "agricultural_commodities": "Commodities Agrícolas",
+        "cbot_mar25": "CBOT • Mar/25",
         "soy": "SOJA (CBOT)",
         "corn": "MAÍZ (B3)",
         "ibovespa": "IBOVESPA (B3)",
