--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -23,6 +23,7 @@
         "subtitle": "Tempo Real • Mercado & Logística",
         "live_data": "Live Data",
         "agricultural_commodities": "Commodities Agrícolas",
+        "cbot_mar25": "CBOT • Mar/25",
         "soy": "SOJA (CBOT)",
         "corn": "MILHO (B3)",
         "ibovespa": "IBOVESPA (B3)",
