feat: add Rafael Varela to governance section with translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -201,7 +201,8 @@
                 "director_relations": "Director of Institutional Relations and Government Liaison",
                 "director_investments": "Director of Investment Structuring and Contractual Security",
                 "director_compliance": "Director of Compliance, Arbitration, and Conflict Resolution",
-                "director_intl_relations": "Director of International Institutional Relations"
+                "director_intl_relations": "Director of International Institutional Relations",
+                "executive_member": "Director of Strategic Intelligence, Risk Analysis, and Geopolitics"
             },
             "descs": {
                 "president": "Consolidated government network with direct access to top decision-makers in Asia, Latin America, and Africa. Decades of structuring high-density transnational operations with development banks, sovereign funds, and State ministries across three continents. Two postgraduate degrees from MIT (Massachusetts Institute of Technology). Executive education from Harvard Business School.",
@@ -209,7 +210,8 @@
                 "director_relations": "Consolidated network in Brasília built over decades of institutional activity. Direct liaison with the Central Bank of Brazil, ministries, and State secretariats. Facilitation of RDE-IED and navigation of the Brazilian regulatory environment for high-density FDI operations.",
                 "director_investments": "Governance where contracts are honored and capital remains protected. Contractual shielding for Foreign Direct Investment (FDI) traversing multiple jurisdictions. Legal structuring that protects nine-digit capital under regulatory insecurity and geopolitical volatility.",
                 "director_compliance": "Technical mediation and dispute resolution where billions are at stake. Arbitration Chamber specializing in commodities with internationally recognized awards. Transnational compliance meeting the Foreign Corrupt Practices Act (FCPA/USA), General Data Protection Law (LGPD/Brazil), and anti-corruption protocols.",
-                "director_intl_relations": "Institutional interface between foreign capital and scale opportunities in Latin America. Coordination with sovereign funds, family offices, and global financial institutions. Transnational liaison for high-density operations at the convergence of Agribusiness and Advanced Technology."
+                "director_intl_relations": "Institutional interface between foreign capital and scale opportunities in Latin America. Coordination with sovereign funds, family offices, and global financial institutions. Transnational liaison for high-density operations at the convergence of Agribusiness and Advanced Technology.",
+                "executive_member": "Anticipation of scenarios where error costs capital, reputation, and permanence. Intelligence applied to decision-making in environments of regulatory, geopolitical, and macroeconomic instability. Sovereign, sectoral, and jurisdictional risk modeling for high-density operations. Continuous monitoring of political, exchange, commercial, and institutional variables impacting transnational investments. Transforming sensitive information into strategic advantage before risk materializes."
             }
         },
         "compliance": {
