--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -201,7 +201,8 @@
                 "director_relations": "Director de Relaciones Institucionales y Enlace Gubernamental",
                 "director_investments": "Directora de Estructuración de Inversiones y Seguridad Contractual",
                 "director_compliance": "Director de Cumplimiento, Arbitraje y Resolución de Conflictos",
-                "director_intl_relations": "Directora de Relaciones Institucionales Internacionales"
+                "director_intl_relations": "Directora de Relaciones Institucionales Internacionales",
+                "executive_member": "Director de Inteligencia Estratégica, Análisis de Riesgo y Geopolítica"
             },
             "descs": {
                 "president": "Líder visionario con décadas de experiencia en el comercio Brasil-China. Red gubernamental consolidada con acceso directo a tomadores de decisiones en Asia, América Latina y África. Décadas de estructuración de operaciones transnacionales de alta densidad junto a bancos de desarrollo, fondos soberanos y ministerios de Estado en tres continentes. Dos posgrados en el MIT (Massachusetts Institute of Technology). Educación ejecutiva en Harvard Business School.",
@@ -209,7 +210,8 @@
                 "director_relations": "Red consolidada en Brasilia construida a lo largo de décadas de actuación institucional. Interlocución directa con el Banco Central de Brasil, ministerios y secretarías de Estado. Facilitación de RDE-IED y navegación en el entorno regulatorio brasileño para operaciones de alta IED.",
                 "director_investments": "Gobernanza donde los contratos se cumplen y el capital permanece protegido. Blindaje contractual para Inversión Extranjera Directa (IED) atravessando múltiples jurisdicciones. Estructuración jurídica que protege capital de nueve dígitos bajo inseguridad regulatoria y volatilidad geopolítica.",
                 "director_compliance": "Mediación técnica y resolución de conflictos donde hay miles de millones en juego. Cámara de Arbitraje especializada en commodities con laudos reconocidos internacionalmente. Cumplimiento transnacional atendiendo a la Ley de Prácticas Corruptas en el Extranjero (FCPA/USA), Ley General de Protección de Datos (LGPD/Brasil) y protocolos anticorrupción.",
-                "director_intl_relations": "Interfaz institucional entre capital extranjero y oportunidades de escala en América Latina. Coordinación con fondos soberanos, family offices e instituciones financieras globales. Interlocución transnacional para operaciones de alta densidad en la convergencia del Agronegocio y Tecnología Avanzada."
+                "director_intl_relations": "Interfaz institucional entre capital extranjero y oportunidades de escala en América Latina. Coordinación con fondos soberanos, family offices e instituciones financieras globales. Interlocución transnacional para operaciones de alta densidad en la convergencia del Agronegocio y Tecnología Avanzada.",
+                "executive_member": "Anticipación de escenarios donde el error cuesta capital, reputación y permanencia. Inteligencia aplicada a la toma de decisiones en entornos de inestabilidad regulatoria, geopolítica y macroeconómica. Modelado de riesgo soberano, sectorial y jurisdiccional para operaciones de alta densidad. Monitoreo continuo de variables políticas, cambiarias, comerciales e institucionales que impactan inversiones transnacionales. Transformación de información sensible en ventaja estratégica antes de que el riesgo se materialice."
             }
         },
         "compliance": {
