--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -201,7 +201,8 @@
                 "director_relations": "机构关系与政府联络主任",
                 "director_investments": "投资结构与合同安全总监",
                 "director_compliance": "合规、仲裁与冲突解决主任",
-                "director_intl_relations": "国际机构关系总监"
+                "director_intl_relations": "国际机构关系总监",
+                "executive_member": "战略情报、风险分析与地缘政治总监"
             },
             "descs": {
                 "president": "拥有数十年巴西-中国贸易经验的远见卓识的领导者。巩固的政府网络，可直接接触亚洲、拉丁美洲和非洲的高层决策者。在三大洲与开发银行、主权基金和国家部委共同构建高密度跨国业务的数十年经验。拥有麻省理工学院 (MIT) 的双研究生学位。哈佛商学院的高管教育背景。",
@@ -209,7 +210,8 @@
                 "director_relations": "在巴西利亚建立了数十年的机构活动巩固网络。与巴西中央银行、各部委和州秘书处直接联络。促进 RDE-IED 并为高密度外国直接投资 (FDI) 业务在巴西监管环境中导航。",
                 "director_investments": "确保合同履行和资本受保护的治理。针对穿越多个司法管辖区的外国直接投资 (FDI) 的合同屏蔽。在监管不确定性和地缘政治波动下保护九位数资本的法律结构。",
                 "director_compliance": "涉及数十亿资金的的技术调解和冲突解决。专门从事大宗商品的仲裁庭，其裁决获得国际认可。符合《反海外腐败法》(FCPA/USA)、《通用数据保护法》(LGPD/Brazil) 和反腐败协议的跨国合规。",
-                "director_intl_relations": "外资与拉丁美洲规模机会之间的机构接口。与主权基金、家族办公室和全球金融机构的协调。在农业综合企业与先进技术融合处的高密度业务的跨国联络。"
+                "director_intl_relations": "外资与拉丁美洲规模机会之间的机构接口。与主权基金、家族办公室和全球金融机构的协调。在农业综合企业与先进技术融合处的高密度业务的跨国联络。",
+                "executive_member": "预测失误将导致资本、声誉和生存代价的场景。将情报应用于监管、地缘政治和宏观经济不确定环境下的决策。针对高密度运营的主权、行业和管辖风险建模。持续监测影响跨国投资的政治、汇率、商业和制度变量。在风险成为现实之前，将敏感信息转化为战略优势。"
             }
         },
         "compliance": {
