Fix: Prevent wrapped text in Hero title on mobile

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,7 +14,7 @@
         "become_member": "Apply for Analysis"
     },
     "hero": {
-        "title": "Chamber of Commerce<1/> Technology and Agro of Latin America.",
+        "title": "Chamber of <2>Commerce<1/></2> Technology and Agro of Latin America.",
         "subtitle": "Institutional Infrastructure for High-Density Operations between Agribusiness and Advanced Technology.",
         "cta_manifesto": "Read the Manifesto"
     },
