--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -14,7 +14,7 @@
         "become_member": "Aplicar para Análisis"
     },
     "hero": {
-        "title": "Cámara de Comercio<1/> Tecnología y Agro de América Latina.",
+        "title": "Cámara de <2>Comercio<1/></2> Tecnología y Agro de América Latina.",
         "subtitle": "Infraestructura Institucional para Operaciones de Alta Densidad entre Agronegocios y Tecnología Avanzada.",
         "cta_manifesto": "Leer el Manifiesto"
     },
