--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -14,7 +14,7 @@
         "become_member": "Aplicar para Análise"
     },
     "hero": {
-        "title": "Câmara de Comércio<1/> Tecnologia e Agro da América Latina.",
+        "title": "Câmara de <2>Comércio<1/></2> Tecnologia e Agro da América Latina.",
         "subtitle": "Infraestrutura Institucional para Operações de Alta Densidade entre Agronegócio e Tecnologia Avançada.",
         "cta_manifesto": "Ler o Manifesto"
     },
