--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -14,7 +14,7 @@
         "become_member": "申请分析"
     },
     "hero": {
-        "title": "拉美商业<1/> 技术与农业商会。",
+        "title": "拉美<2>商业<1/></2> 技术与农业商会。",
         "subtitle": "农业综合企业与先进技术之间高密度运营的机构基础设施。",
         "cta_manifesto": "阅读宣言"
     },
