feat: replace images for news, governance, and cleanup unused assets

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,9 +23,9 @@
         "subtitle": "Real Time • Market & Logistics",
         "live_data": "Live Data",
         "agricultural_commodities": "Agricultural Commodities",
-        "cbot_mar25": "CBOT • Mar/25",
+        "cbot_mar25": "CBOT • Mar/26",
         "soy": "SOYBEAN (CBOT)",
-        "corn": "CORN (B3)",
+        "corn": "CORN (CBOT)",
         "ibovespa": "IBOVESPA (B3)",
         "sp500": "S&P 500",
         "bitcoin": "BITCOIN",
