--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -23,9 +23,9 @@
         "subtitle": "实时 • 市场与物流",
         "live_data": "实时数据",
         "agricultural_commodities": "农产品大宗商品",
-        "cbot_mar25": "CBOT • 25年3月",
+        "cbot_mar25": "CBOT • 26年3月",
         "soy": "大豆 (CBOT)",
-        "corn": "玉米 (B3)",
+        "corn": "玉米 (CBOT)",
         "ibovespa": "巴西指数 (B3)",
         "sp500": "标准普尔 500",
         "bitcoin": "比特币",
