--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -23,9 +23,9 @@
         "subtitle": "Tiempo Real • Mercado y Logística",
         "live_data": "Datos en Vivo",
         "agricultural_commodities": "Commodities Agrícolas",
-        "cbot_mar25": "CBOT • Mar/25",
+        "cbot_mar25": "CBOT • Mar/26",
         "soy": "SOJA (CBOT)",
-        "corn": "MAÍZ (B3)",
+        "corn": "MAÍZ (CBOT)",
         "ibovespa": "IBOVESPA (B3)",
         "sp500": "S&P 500",
         "bitcoin": "BITCOIN",
