--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -23,9 +23,9 @@
         "subtitle": "Tempo Real • Mercado & Logística",
         "live_data": "Live Data",
         "agricultural_commodities": "Commodities Agrícolas",
-        "cbot_mar25": "CBOT • Mar/25",
+        "cbot_mar25": "CBOT • Mar/26",
         "soy": "SOJA (CBOT)",
-        "corn": "MILHO (B3)",
+        "corn": "MILHO (CBOT)",
         "ibovespa": "IBOVESPA (B3)",
         "sp500": "S&P 500",
         "bitcoin": "BITCOIN",
