feat: update global ticker translations and remove temp scripts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,7 +54,8 @@
         "brent_oil": "BRENT OIL",
         "global_energy": "Global Energy",
         "source": "SOURCE: B3, CBOT, NASDAQ, AWESOMEAPI",
-        "updated": "UPDATED"
+        "updated": "UPDATED",
+        "coffee": "COFFEE (ARABICA)"
     },
     "institutional": {
         "label": "Institutional",
